# Bug-Whisperer

./: .env.example  .gitignore  README.md  netlify.toml
backend/: .env.railway  pyproject.toml  railway.toml  requirements.txt
backend/src/: cli.py  main.py  memory.py  models.py
frontend/: components.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/optics/: accordion.jsx  alert.jsx  badge.jsx  chart.jsx  code-block.jsx  dialog.jsx  input.jsx  progress.jsx  scroll-area.jsx  select.jsx  separator.jsx  sonner.jsx  spinner.jsx  tabs.jsx  textarea.jsx  theme-switcher.jsx  tooltip.jsx
frontend/src/components/optics/helpers/primitives/animate/: slot.jsx
frontend/src/components/optics/helpers/primitives/effects/: auto-height.jsx  highlight.jsx
frontend/src/hooks/: use-auto-height.jsx  use-controlled-state.jsx
frontend/src/lib/: api.ts  get-strict-context.jsx
